--- a/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
+++ b/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1419CB8E-F9FF-4A36-8D34-FA4AD948CDB1}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>Ex05.GameLogic</RootNamespace>
     <AssemblyName>Ex05.GameLogic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -42,17 +42,10 @@
     <Compile Include="Board.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="TicTacToe.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Drawing" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ex05.GameInterface\Ex05.GameInterface.csproj">
-      <Project>{74802d9e-635e-4b58-ba09-b5f568ae846e}</Project>
-      <Name>Ex05.GameInterface</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
