Completed human players, board graphics, logic

--- a/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
+++ b/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="GameLogic.cs" />
+    <Compile Include="MoveEventArgs.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="TicTacToe.cs" />
   </ItemGroup>
