--- a/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameInterface/Ex05.GameInterface.csproj
+++ b/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameInterface/Ex05.GameInterface.csproj
@@ -49,6 +49,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameForm.Designer.cs">
+      <DependentUpon>GameForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameOverPromptForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameOverPromptForm.Designer.cs">
+      <DependentUpon>GameOverPromptForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +69,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TicTacToeButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <EmbeddedResource Include="GameForm.resx">
+      <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameOverPromptForm.resx">
+      <DependentUpon>GameOverPromptForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GameSettingsForm.resx">
       <DependentUpon>GameSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
