handle AI player
design changes

--- a/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
+++ b/B21 Ex05 Omer 311502579 Ohad 313220378/Ex05.GameLogic/Ex05.GameLogic.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="GameLogic.cs" />
+    <Compile Include="TicTacToeLogic.cs" />
     <Compile Include="MoveEventArgs.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="TicTacToe.cs" />
